--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
     <url>https://www.interface21.io/docs/tms/transportation/index.html</url>
 
     <properties>
-        <common-service.version>1.2.0</common-service.version>
+        <common-service.version>1.3.0-SNAPSHOT</common-service.version>
         <core.version>1.3.0</core.version>
         <feign-httpclient.version>9.5.1</feign-httpclient.version>
         <guava.version>19.0</guava.version>
