--- a/pom.xml
+++ b/pom.xml
@@ -15,8 +15,7 @@
     <url>https://www.interface21.io/docs/tms/transportation/index.html</url>
 
     <properties>
-        <common-service.version>1.2.0</common-service.version>
-        <core.version>1.3.0</core.version>
+        <common-service.version>1.3.0-SNAPSHOT</common-service.version>
         <feign-httpclient.version>9.5.1</feign-httpclient.version>
         <guava.version>19.0</guava.version>
     </properties>
@@ -209,11 +208,6 @@
         <dependency>
             <groupId>com.fasterxml.jackson.datatype</groupId>
             <artifactId>jackson-datatype-jdk8</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>com.h2database</groupId>
-            <artifactId>h2</artifactId>
-            <scope>runtime</scope>
         </dependency>
         <dependency>
             <groupId>org.postgresql</groupId>
