--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -15,26 +15,28 @@ spring:
       name: user
 
 owms:
+  srv:
+    protocol: http
+    hostname: localhost
   eureka:
-    # Override this in cloud environment!
     url: http://user:sa@localhost:8761
+    zone: ${owms.eureka.url}/eureka/
 
 server:
   port: ${PORT:8131}
 
 eureka:
   client:
-    serviceUrl:
-      # need to be overridden in the cloud environment props!
-      defaultZone: ${owms.eureka.url}/eureka
+    instance-info-replication-interval-seconds: 10 # default is 30
+    service-url:
+      defaultZone: ${owms.eureka.zone}  # Must be camelCase
   instance:
-    secure-port-enabled: false
-    non-secure-port-enabled: true
     metadata-map:
-      # need to be overridden in the cloud environment props!
       username: ${spring.security.user.name}
       password: ${spring.security.user.password}
-      protocol: http
+      protocol: ${owms.srv.protocol}
+      zone: ${owms.eureka.zone}
+    hostname: ${owms.srv.hostname}
 
 ---
 spring:
@@ -42,13 +44,15 @@ spring:
   main:
     banner-mode: "OFF"
 
+owms:
+  srv:
+    protocol: https
+    hostname: openwms-tms-transportation.herokuapp.com
+
 eureka:
   instance:
-    hostname: openwms-tms-transportation.herokuapp.com
     secure-port-enabled: true
     non-secure-port-enabled: false
-    statusPageUrl: https://${eureka.instance.hostName}/info
-    healthCheckUrl: https://${eureka.instance.hostName}/health
-    homePageUrl: https://${eureka.instance.hostName}/
-    metadata-map:
-      protocol: https
+    statusPageUrl: ${owms.srv.protocol}://${owms.srv.hostname}:${server.port}/actuator/info
+    healthCheckUrl: ${owms.srv.protocol}://${owms.srv.hostname}:${server.port}/actuator/health
+    homePageUrl: ${owms.srv.protocol}://${owms.srv.hostname}:${server.port}/actuator/
