--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,12 +5,19 @@ eureka:
 
 owms:
   commands:
+    common:
+      tu:
+        exchange-name: common.tu.commands
+        routing-key: common.tu.command.removing
+        queue-name: tms-tu-commands-queue
     tms:
       to:
-        routing-key: to.*
         exchange-name: tms.commands
-        queue-name: tms.to.commands
+        routing-key: to.*
+        queue-name: tms-to-commands
   events:
     common:
       tu:
         exchange-name: common.tu
+  tms:
+    block-tu-deletion-states:
