--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,3 +1,3 @@
-sonar.projectKey=openwms_org.openwms.tms.transportation
+sonar.projectKey=org.openwms:org.openwms.tms.transportation
 sonar.sources=src/main/java/
 sonar.java.binaries=target/classes
