--- a/src/main/resources/bootstrap.yml
+++ b/src/main/resources/bootstrap.yml
@@ -23,6 +23,8 @@ owms:
   srv:
     protocol: http
     hostname: localhost
+  transportation:
+    serialization: json
 
 server:
   port: ${PORT:8131}
