--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,11 @@
     <artifactId>org.openwms.tms.transportation</artifactId>
     <version>1.3.0-SNAPSHOT</version>
     <name>OpenWMS.org TMS: Transportation Services</name>
-    <url>https://www.interface21.io/docs/tms/transportation/index.html</url>
+    <url>https://openwms.github.io/org.openwms.tms.transportation/index.html</url>
+
+    <properties>
+        <common-service.version>1.4.0-SNAPSHOT</common-service.version>
+    </properties>
 
     <issueManagement>
         <system>github</system>
@@ -62,10 +66,6 @@
             </notifier>
         </notifiers>
     </ciManagement>
-
-    <properties>
-        <common-service.version>1.4.0-SNAPSHOT</common-service.version>
-    </properties>
 
     <reporting>
         <plugins>
