--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,8 @@ language: java
 jdk:
   - openjdk8
 
+dist: trusty
+
 sudo: true
 
 cache:
@@ -26,9 +28,6 @@ addons:
   sonarcloud:
     organization: "openwms-github"
   postgresql: '9.6'
-  apt:
-    packages:
-      - rabbitmq-server
 
 script:
   - if [[ ( "$TRAVIS_BRANCH" != "master" ) ]]; then mvn package -DsurefireArgs=-Dspring.profiles.active=ASYNCHRONOUS,TEST -Dci.buildNumber=$TRAVIS_BUILD_NUMBER -U; fi
